--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "rimraf": "^3.0.0",
+    "socket.io": "^2.2.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/mongoose-unique-validator": "^1.0.2",
     "@types/morgan": "^1.7.37",
     "@types/multer": "^1.3.9",
+    "@types/socket.io": "^2.1.2",
     "@types/uuid": "^3.4.5",
     "nodemon": "^1.19.2",
     "ts-node": "^8.4.1",
